k8s/analytics-service.yml
apiVersion: v1
kind: Service
metadata:
  name: analytics-service
  namespace: orion-platform
spec:
  selector:
    app: analytics-service
  ports:
    - name: http
      port: 8083
      targetPort: 8083
    - name: grpc
      port: 50053
      targetPort: 50053
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: analytics-service
  namespace: orion-platform
spec:
  replicas: 1
  selector:
    matchLabels:
      app: analytics-service
  template:
    metadata:
      labels:
        app: analytics-service
    spec:
      containers:
        - name: analytics-service
          image: analytics-service:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8083
            - containerPort: 50053
