k8s/inventory-service.yml
apiVersion: v1
kind: Service
metadata:
  name: inventory-service
  namespace: orion-platform
spec:
  selector:
    app: inventory-service
  ports:
    - name: http
      port: 8082
      targetPort: 8082
    - name: grpc
      port: 50052
      targetPort: 50052
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory-service
  namespace: orion-platform
spec:
  replicas: 1
  selector:
    matchLabels:
      app: inventory-service
  template:
    metadata:
      labels:
        app: inventory-service
    spec:
      containers:
        - name: inventory-service
          image: inventory-service:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8082
            - containerPort: 50052
