k8s/order-service.yml
apiVersion: v1
kind: Service
metadata:
  name: order-service
  namespace: orion-platform
spec:
  selector:
    app: order-service
  ports:
    - name: http
      port: 8081
      targetPort: 8081
    - name: grpc
      port: 50051
      targetPort: 50051
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service
  namespace: orion-platform
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-service
  template:
    metadata:
      labels:
        app: order-service
    spec:
      containers:
        - name: order-service
          image: order-service:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8081
            - containerPort: 50051
