k8s/postgres-inventory.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres-inventory
  namespace: orion-platform
spec:
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: postgres-inventory
  clusterIP: None

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres-inventory
  namespace: orion-platform
spec:
  serviceName: postgres-inventory
  replicas: 1
  selector:
    matchLabels:
      app: postgres-inventory
  template:
    metadata:
      labels:
        app: postgres-inventory
    spec:
      containers:
        - name: postgres
          image: postgres:15-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
    - metadata:
        name: postgres-storage
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi
